--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 <h1>Jorge's Portfolio</h1>
-<h2>I'm studyng web Development</h2>
+<h2>I'm studying web Development</h2>
 <hr />
 <h3> <a href="/4.3 HTML Porfolio Project//public//movie-ranking.html">Movie Ranking Project </a></h3>
 <img src="./assets/images/Movie - Ranking Jorge.jpeg" height="200" alt= "movie ranking project preview" /> 
