--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h1>Jorge's Portfolio</h1>
 <h2>I'm studying web Development</h2>
 <hr />
-<h3> <a href="/4.3 HTML Porfolio Project//public//movie-ranking.html">Movie Ranking Project </a></h3>
+<h3> <a href="./public/movie-ranking.html">Movie Ranking Project </a></h3>
 <img src="./assets/images/Movie - Ranking Jorge.jpeg" height="200" alt= "movie ranking project preview" /> 
 <h3> <a href="./public/birthday-invite.html">Birthday Invite Project </a></h3>
 <img src="./assets/images/Birthday Invite Jorge.jpeg" height="200" alt="birthday invite project preview"/>
